--- a/main.ipynb
+++ b/main.ipynb
@@ -262,7 +262,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for "
+    "for i in class_room.keys():\n",
+    "    for x in range(4):\n",
+    "        class_room[][]"
    ]
   },
   {
