done with must haves

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 148,
    "id": "a2df363d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 149,
    "id": "6aacbf0a",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "4  Moussa"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "2e44677c",
    "metadata": {},
    "outputs": [
@@ -150,19 +150,20 @@
        "4        Moussa"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# assigning column name to the the students name column\n",
     "students=students.set_axis([\"students_name\"], axis=1)\n",
     "students.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 151,
    "id": "3616abdc",
    "metadata": {},
    "outputs": [
@@ -197,7 +198,7 @@
        " 'Emmanuel']"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "7d1a9d05",
    "metadata": {},
    "outputs": [
@@ -220,23 +221,25 @@
        "26"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# checking the number of students\n",
     "len(students)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "id": "d5b2837e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a class room there each table has four chair \n",
+    "# Creating a class_room dictionary there each table has four chair \n",
+    "# table as keys and chairs as values to the keys\n",
     "class_room = {\"table1\":[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]}\n",
     "class_room[\"table2\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
     "class_room[\"table3\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
@@ -247,24 +250,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "95f26ffd",
+   "execution_count": 168,
+   "id": "a6c998bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['table1', 'table2', 'table3', 'table4', 'table5', 'table6', 'table7'])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tables=[\"table1\",\"table2\",\"table3\",\"table4\",\"table5\",\"table6\"]"
+    "class_room.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "id": "b0d33adb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "table1\n",
+      "chair1=['Fang']\n",
+      "chair2=['Younes']\n",
+      "chair3=['Caterina']\n",
+      "chair4=['Emmanuel']\n",
+      "table2\n",
+      "chair1=['Fang']\n",
+      "chair2=['Jordi']\n",
+      "chair3=['Emmanuel']\n",
+      "chair4=['Mengstu']\n",
+      "table3\n",
+      "chair1=['Emmanuel']\n",
+      "chair2=['Marc']\n",
+      "chair3=['Megan']\n",
+      "chair4=['Emmanuel']\n",
+      "table4\n",
+      "chair1=['Evi']\n",
+      "chair2=['Jordi']\n",
+      "chair3=['Evi']\n",
+      "chair4=['Jordi']\n",
+      "table5\n",
+      "chair1=['Choti']\n",
+      "chair2=['Yassine']\n",
+      "chair3=['Floriane']\n",
+      "chair4=['Moussa']\n",
+      "table6\n",
+      "chair1=['Younes']\n",
+      "chair2=['Yves']\n",
+      "chair3=['Choti']\n",
+      "chair4=['Mengstu']\n",
+      "table7\n",
+      "chair1=['Megan']\n",
+      "chair2=['Hanieh']\n",
+      "chair3=['Megan']\n",
+      "chair4=['Dragos']\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in class_room.keys():\n",
-    "    for x in range(4):\n",
-    "        class_room[][]"
+    "#assigning random seats to the students\n",
+    "if len(students)<=24:          \n",
+    "    # if students have sufficient chairs present\n",
+    "    seatsleft=24\n",
+    "    for i in class_room.keys():\n",
+    "        print(i)\n",
+    "        for x in range(4):\n",
+    "            print(f\"{class_room[i][x]}={random.sample(students,1)}\")\n",
+    "        seatsleft-=1\n",
+    "\n",
+    "elif len(students)>24:           \n",
+    "     # if the no of students is more than the chairs in room\n",
+    "    class_room[\"table7\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]       \n",
+    "    # adding one more table to the classroom\n",
+    "    seatsleft=28\n",
+    "    for i in class_room.keys():\n",
+    "        print(i)\n",
+    "        for x in range(4):\n",
+    "            print(f\"{class_room[i][x]}={random.sample(students,1)}\")\n",
+    "        seatsleft-=1\n",
+    "\n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -311,327 +387,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e64fa399",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0271637f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'self' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[114], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlist1:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is assigned the seat number: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mrandom\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlist2,\u001b[38;5;241m1\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'self' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "class arrangement():\n",
-    "    def __init__(self, list1, list2):\n",
-    "        self.list1=list1\n",
-    "        self.list2=list2\n",
-    "    \n",
-    "    def chair_assignment(self):\n",
-    "        for i in self.list1:\n",
-    "            print(f\"{i} is assigned the seat number: {random.sample(self.list2,1)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc9ea636",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class seat():                                  ## free==chairs                  occcupant is the chair no  dictionary\n",
-    "    def __init__(self, free=True, occupant):      \n",
-    "        self.free=free\n",
-    "        self.occupant=occupant\n",
-    "        \n",
-    "            \n",
-    "    \n",
-    "    def set_occupant(name):\n",
-    "        #which allows the program to assign someone a seat if it's free\n",
-    "        if self.free==1:\n",
-    "            self.occupant=name\n",
-    "\n",
-    "            print(f\"{name} is sitting on \")\n",
-    "            self.free=False\n",
-    "            \n",
-    "\n",
-    "        \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a7f26c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class table():\n",
-    "    def __init__(self, capacity, seats):     # capaciry is no of chairs present\n",
-    "        self.capacity=capacity\n",
-    "        self.seats=seats\n",
-    "        \n",
-    "    def has_free_spot(): \n",
-    "        \n",
-    "        #that returns a boolean (True if a spot is available)\n",
-    "    def assign_seat(name):\n",
-    "        # that places someone at the table\n",
-    "    def left_capacity():\n",
-    "        # that returns an integer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c94ab67",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hajer: ['chair52']\n",
-      "Charly: ['chair53']\n",
-      "Choti: ['chair32']\n",
-      "Megan: ['chair61']\n",
-      "Moussa: ['chair62']\n",
-      "Yves: ['chair42']\n",
-      "Preeti: ['chair61']\n",
-      "Nadiya: ['chair52']\n",
-      "Aida: ['chair43']\n",
-      "Augustin: ['chair44']\n",
-      "Klebert: ['chair42']\n",
-      "Marc: ['chair34']\n",
-      "Sofia: ['chair53']\n",
-      "Younes: ['chair12']\n",
-      "Kenny: ['chair61']\n",
-      "Floriane: ['chair44']\n",
-      "Jordi: ['chair31']\n",
-      "Alberto: ['chair21']\n",
-      "Fang: ['chair64']\n",
-      "Caterina: ['chair34']\n",
-      "Yassine: ['chair61']\n",
-      "Dragos: ['chair11']\n",
-      "Hanieh: ['chair22']\n",
-      "Mengstu: ['chair54']\n"
-     ]
-    }
-   ],
-   "source": [
-    "class openspace:\n",
-    "    def __init__(self, table,no_of_tables)\n",
-    "\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fba927da",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set_occupant(name):\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "d3b60045",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['table1', 'table2', 'table3', 'table4', 'table5', 'table6'])"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class_room.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "949e8963",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Seat:\n",
-    "    def __init__(self):\n",
-    "       \n",
-    "        \n",
-    "        self.free = True\n",
-    "        self.occupant = None \n",
-    "\n",
-    "    def set_occupant(self, name):\n",
-    "       \n",
-    "        if self.free:\n",
-    "            self.occupant = name\n",
-    "            self.free = False\n",
-    "            print(f\"'{name}' has been assigned to the seat.\")\n",
-    "            return True\n",
-    "        else:\n",
-    "            print(f\"This seat is already occupied by '{self.occupant}'. Cannot assign '{name}'.\")\n",
-    "            return False\n",
-    "\n",
-    "    def remove_occupant(self):\n",
-    "      \n",
-    "        if not self.free:\n",
-    "            removed_name = self.occupant\n",
-    "            self.occupant = None\n",
-    "            self.free = True\n",
-    "            print(f\"'{removed_name}' has been removed from the seat. The seat is now free.\")\n",
-    "            return removed_name\n",
-    "        else:\n",
-    "            print(\"This seat is already free. No occupant to remove.\")\n",
-    "            return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83b8e8b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "977b2a37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cd8d2a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61a4860f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77bfe91a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6324d69a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe945cdf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68763539",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6bbe5b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ad03673",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "512452da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76aa415d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cb3f55f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "103aa422",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99a816a4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d32b68e",
    "metadata": {},
    "outputs": [],
    "source": []
