--- a/main.ipynb
+++ b/main.ipynb
@@ -2,277 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 178,
    "id": "a2df363d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import random\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 149,
-   "id": "6aacbf0a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hajer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Charly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Choti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Megan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Moussa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        0\n",
-       "0   Hajer\n",
-       "1  Charly\n",
-       "2   Choti\n",
-       "3   Megan\n",
-       "4  Moussa"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Loading the name of students in students\n",
-    "students=pd.read_csv(\"C:\\\\Users\\\\preet\\\\practicefolder\\\\colleagues.csv\", header=None)\n",
-    "students.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e44677c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>students_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Hajer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Charly</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Choti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Megan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Moussa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  students_name\n",
-       "0         Hajer\n",
-       "1        Charly\n",
-       "2         Choti\n",
-       "3         Megan\n",
-       "4        Moussa"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# assigning column name to the the students name column\n",
-    "students=students.set_axis([\"students_name\"], axis=1)\n",
-    "students.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "id": "3616abdc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Hajer',\n",
-       " 'Charly',\n",
-       " 'Choti',\n",
-       " 'Megan',\n",
-       " 'Moussa',\n",
-       " 'Yves',\n",
-       " 'Preeti',\n",
-       " 'Nadiya',\n",
-       " 'Aida',\n",
-       " 'Augustin',\n",
-       " 'Klebert',\n",
-       " 'Marc',\n",
-       " 'Sofia',\n",
-       " 'Younes',\n",
-       " 'Kenny',\n",
-       " 'Floriane',\n",
-       " 'Jordi',\n",
-       " 'Alberto',\n",
-       " 'Fang',\n",
-       " 'Caterina',\n",
-       " 'Yassine',\n",
-       " 'Dragos',\n",
-       " 'Hanieh',\n",
-       " 'Mengstu',\n",
-       " 'Evi',\n",
-       " 'Emmanuel']"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# making a list of students\n",
-    "students=list(students[\"students_name\"])\n",
-    "students"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d1a9d05",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# checking the number of students\n",
-    "len(students)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5b2837e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Creating a class_room dictionary there each table has four chair \n",
-    "# table as keys and chairs as values to the keys\n",
-    "class_room = {\"table1\":[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]}\n",
-    "class_room[\"table2\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
-    "class_room[\"table3\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
-    "class_room[\"table4\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
-    "class_room[\"table5\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
-    "class_room[\"table6\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "id": "a6c998bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['table1', 'table2', 'table3', 'table4', 'table5', 'table6', 'table7'])"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class_room.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "id": "b0d33adb",
    "metadata": {},
    "outputs": [
     {
@@ -280,44 +11,65 @@
      "output_type": "stream",
      "text": [
       "table1\n",
-      "chair1=['Fang']\n",
-      "chair2=['Younes']\n",
-      "chair3=['Caterina']\n",
-      "chair4=['Emmanuel']\n",
-      "table2\n",
-      "chair1=['Fang']\n",
-      "chair2=['Jordi']\n",
-      "chair3=['Emmanuel']\n",
-      "chair4=['Mengstu']\n",
-      "table3\n",
       "chair1=['Emmanuel']\n",
-      "chair2=['Marc']\n",
-      "chair3=['Megan']\n",
-      "chair4=['Emmanuel']\n",
+      "chair2=['Alberto']\n",
+      "chair3=['Charly']\n",
+      "chair4=['Yassine']\n",
+      "table2\n",
+      "chair1=['Yves']\n",
+      "chair2=['Younes']\n",
+      "chair3=['Hanieh']\n",
+      "chair4=['Sofia']\n",
+      "table3\n",
+      "chair1=['Alberto']\n",
+      "chair2=['Younes']\n",
+      "chair3=['Augustin']\n",
+      "chair4=['Megan']\n",
       "table4\n",
-      "chair1=['Evi']\n",
-      "chair2=['Jordi']\n",
-      "chair3=['Evi']\n",
-      "chair4=['Jordi']\n",
+      "chair1=['Sofia']\n",
+      "chair2=['Moussa']\n",
+      "chair3=['Aida']\n",
+      "chair4=['Yves']\n",
       "table5\n",
-      "chair1=['Choti']\n",
-      "chair2=['Yassine']\n",
-      "chair3=['Floriane']\n",
-      "chair4=['Moussa']\n",
+      "chair1=['Jordi']\n",
+      "chair2=['Sofia']\n",
+      "chair3=['Fang']\n",
+      "chair4=['Dragos']\n",
       "table6\n",
-      "chair1=['Younes']\n",
-      "chair2=['Yves']\n",
-      "chair3=['Choti']\n",
-      "chair4=['Mengstu']\n",
-      "table7\n",
-      "chair1=['Megan']\n",
-      "chair2=['Hanieh']\n",
+      "chair1=['Alberto']\n",
+      "chair2=['Choti']\n",
       "chair3=['Megan']\n",
-      "chair4=['Dragos']\n"
+      "chair4=['Augustin']\n",
+      "table7\n",
+      "chair1=['Nadiya']\n",
+      "chair2=['Aida']\n",
+      "chair3=['Moussa']\n",
+      "chair4=['Marc']\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "\n",
+    "#Loading the name of students in students\n",
+    "students=pd.read_csv(\"C:\\\\Users\\\\preet\\\\practicefolder\\\\colleagues.csv\", header=None)\n",
+    "students.head()\n",
+    "# assigning column name to the the students name column\n",
+    "students=students.set_axis([\"students_name\"], axis=1)\n",
+    "# making a list of students\n",
+    "students=list(students[\"students_name\"])\n",
+    "\n",
+    "# checking the number of students\n",
+    "len(students)\n",
+    "# Creating a class_room dictionary there each table has four chair \n",
+    "# table as keys and chairs as values to the keys\n",
+    "class_room = {\"table1\":[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]}\n",
+    "class_room[\"table2\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
+    "class_room[\"table3\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
+    "class_room[\"table4\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
+    "class_room[\"table5\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
+    "class_room[\"table6\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
     "#assigning random seats to the students\n",
     "if len(students)<=24:          \n",
     "    # if students have sufficient chairs present\n",
@@ -338,9 +90,7 @@
     "        for x in range(4):\n",
     "            print(f\"{class_room[i][x]}={random.sample(students,1)}\")\n",
     "        seatsleft-=1\n",
-    "\n",
-    "\n",
-    "        "
+    "\n"
    ]
   },
   {
@@ -349,7 +99,10 @@
    "id": "5703e202",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
