added a class to add or remove occupant

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "a2df363d",
    "metadata": {},
    "outputs": [
@@ -70,6 +70,8 @@
     "class_room[\"table4\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
     "class_room[\"table5\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
     "class_room[\"table6\"]=[\"chair1\",\"chair2\",\"chair3\",\"chair4\"]\n",
+    "\n",
+    "\n",
     "#assigning random seats to the students\n",
     "if len(students)<=24:          \n",
     "    # if students have sufficient chairs present\n",
@@ -95,54 +97,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5703e202",
+   "execution_count": 272,
+   "id": "390b91e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preeti is assigned to this the seat\n",
+      "preeti is removed from seat\n"
+     ]
+    }
+   ],
    "source": [
+    "class Seat:\n",
+    "    def __init__(self):\n",
+    "        self.free = True\n",
+    "        self.occupant = None\n",
+    "   \n",
+    "    def set_occupant(self, name):\n",
+    "        \n",
+    "        if self.free==1:\n",
+    "            self.occupant = name\n",
+    "            self.free = False\n",
+    "            print(f\"{self.occupant} is assigned to this the seat\")\n",
+    "        else:\n",
+    "            print(f\"{self.occupant} is occupying the seat\")\n",
+    "    \n",
     "\n",
-    "    "
+    "    def remove_occupant(self):\n",
+    "       \n",
+    "        if self.free==0:\n",
+    "            removed_name = self.occupant\n",
+    "            self.free==1\n",
+    "            print(f\"{self.occupant} is removed from seat\")\n",
+    "            \n",
+    "class1=Seat()\n",
+    "class1.set_occupant(\"preeti\")\n",
+    "class1.remove_occupant()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3b94b67",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f67de27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c45a5192",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b173bf86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e64fa399",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
