created class for assigning and removing students from seats

--- a/main.ipynb
+++ b/main.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": null,
    "id": "390b91e7",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
     "        if self.free==1:\n",
     "            self.occupant = name\n",
     "            self.free = False\n",
-    "            print(f\"{self.occupant} is assigned to this the seat\")\n",
+    "            print(f\"{self.occupant} is assigned to this seat\")\n",
     "        else:\n",
     "            print(f\"{self.occupant} is occupying the seat\")\n",
     "    \n",
